2005-07-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/include/dots.hh (class Dots): make has_interface() static.

	* python/convertrules.py (conv): add rule for ly:grob-default-font

	* scm/define-grobs.scm (all-grob-descriptions): reorganize in
	alphabetical order.

	* input/regression/trill-spanner-pitched.ly: new file.

	* lily/font-interface-scheme.cc (LY_DEFINE): function
	ly:grob-default-font (changed from get-default-font).

	* lily/axis-group-interface-scheme.cc (LY_DEFINE): new file.

	* lily/note-head.cc (internal_print): if style is not a symbol,
	set style to 'default. 
	(internal_print): no style suffix if glyph-name-procedure not
	set. Default to quarter head.

	* scm/define-grobs.scm (Module): new grob TrillPitchHead.

	* scm/define-music-properties.scm (all-music-properties): add trill-pitch.

	* ly/music-functions-init.ly: \pitchedTrill

	* lily/pitched-trill-engraver.cc (acknowledge_grob): new file.

	* ly/Welcome_to_LilyPond.ly: update to 2.6.0

	* lily/trill-spanner-engraver.cc (finalize): rename req -> event

	* scm/define-markup-commands.scm (pad-markup): pad-markup command.

	* po/fr.po: update

	* po/de.po: update.

2005-07-06  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/changing-defaults.itely: add link
	to grob-iterface.

	* Documentation/user/advanced-notation.itely: add material
	to Setting automatic beam behaviour.  Thanks, Joe!

	* Documentation/user/lilypond.itely: change encoding to utf-8.

2005-07-01  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Setting automatic
	beam behavior): Correct the documentation of
	revert-auto-beam-setting (backportme)

2005-07-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/ly-module.cc (ly_make_anonymous_module): define
	%module-public-interface of module. (backportme)

	* lily/lily-parser.cc (print_smob): allow printing of parser smob
	without lexer.

2005-07-01  Han-Wen Nienhuys  <hanwen@xs4all.nl>
