@@ -37,7 +37,7 @@ STEPMAKE_COMPILE
 
 STEPMAKE_KPATHSEA
 
-STEPMAKE_PYTHON(REQUIRED, 2.1)
+STEPMAKE_PYTHON(REQUIRED, 2.2)
 STEPMAKE_GCC(REQUIRED, 2.8)
 STEPMAKE_CXX(REQUIRED)
 STEPMAKE_GXX(REQUIRED, 3.0.5)
