@@ -1,5 +1,9 @@
 2005-07-08  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* scm/define-markup-commands.scm (text): add \text markup command.
+
+	* configure.in (reloc_b): bump requirement to Python 2.2.
+
 	* lily/include/dots.hh (class Dots): make has_interface() static.
 
 	* python/convertrules.py (conv): add rule for ly:grob-default-font
